# ChangeLog for x11-themes/gtk-engines-xfce
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2007; Christoph Mende <angelos@gentoo.org>
  gtk-engines-xfce-9999.ebuild:
  Remove S definition

  29 Sep 2007; Christoph Mende <angelos@gentoo.org>
  gtk-engines-xfce-9999.ebuild:
  Cleanup

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
