@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST gtk-xfce-engine-2.5.92.tar.bz2 274675 RMD160 a0da779bb47877a208b076835dac2dd2177edb44 SHA1 f403c3b0817ba46a953cf4aa725d1dea52e9b216 SHA256 b18755a169f0b301d4682ef5ff018a8734249d5749ba4097b667f181da8011d9
+EBUILD gtk-engines-xfce-2.5.92.ebuild 449 RMD160 95db1f4ff50db223d242bceac73c5ca62679a76f SHA1 9f34c0d5d10569f7f4f52e9ef8c2d35879a2d08b SHA256 7770ddc33a534f28d7fc2e69a17c9b35ef781d9ce65b23ad3970ee643c10be2c
 EBUILD gtk-engines-xfce-9999.ebuild 430 RMD160 da9d5060cc2f3e32a4ebb6baf9f703e34dff3728 SHA1 b59ff8fc54808bc5da317d909952f2150875404b SHA256 99102cd02f2cabab8bf4c5cbce4b90d408f3270b5463a812a2ddcc1c23877f20
-MISC ChangeLog 414 RMD160 908d20bd864acece5e6e86cf351077b48e9cbd79 SHA1 2c76879eb4ee718215834d331e3973e5298c5f73 SHA256 fbe6793a2e21c4e6c411ab5c2cc90b138ccdb63823dfc182a94d4fec35b9babd
+MISC ChangeLog 565 RMD160 96ac6696f18d263c2c597ae3ccf34878d721fc9a SHA1 ecb34d7c46200281331fddef29b05eca49ee0dc9 SHA256 d90fac4bbefc29143f4336f59276f89376ccf6455d3db124f683613827b8e85b
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXWvYACgkQKhnDs22gwa+jnACeI5w6G9xQQf1u/W7e+mBqAsRS
-8J8AmQEghpBRZqg9iFJmIZqtRgj7m+wQ
-=IHRY
+iEYEARECAAYFAkkdtd4ACgkQKhnDs22gwa9WLQCfcRyVBLD1PFCCsOqKft/6XglY
+jFgAoL86xmj+nbtjN2hdIqkJ1xZL1gy3
+=yIYC
 -----END PGP SIGNATURE-----
