@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gtk-engines-xfce-2.5.92 (14 Nov 2008)
+
+  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
+  +gtk-engines-xfce-2.5.92.ebuild:
+  Xfce-4.6 Beta 2 bump
 
   09 Nov 2007; Christoph Mende <angelos@gentoo.org>
   gtk-engines-xfce-9999.ebuild:
